# cmdx

./: .gitignore  Cargo.toml  README.md  test_output.txt
completions/: README.md  _cmdx  cmdx.bash
examples/: README.md  linux_script.sh  windows_script.bat
src/: entry.rs  lib.rs  main.rs
src/translator/: command_map.rs  distro.rs  engine.rs  env.rs  mod.rs  os.rs  package_manager.rs  path.rs
