[package]
name = "cmdx"
version = "0.1.0"
edition = "2021"
description = "Advanced runtime command translator for Windows<->Linux and other OS platforms"
authors = ["cmdx contributors"]
license = "MIT"
readme = "README.md"
keywords = ["command", "translator", "cross-platform", "cli", "shell"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "cmdx"
path = "src/main.rs"

[lib]
name = "cmdx"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
