[package]
name = "cmdx"
version = "0.1.0"
edition = "2021"
description = "Cross-platform command and path translator library for terminal emulators"
authors = ["cmdx contributors"]
license = "MIT"
readme = "README.md"
keywords = ["command", "translator", "cross-platform", "terminal", "path"]
categories = ["development-tools", "os"]

[dependencies]
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "cmdx"
path = "src/lib.rs"
crate-type = ["cdylib"]
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
